--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,6 +16,14 @@
   --ifm-color-primary-lightest: rgb(146, 224, 208);
   --ifm-code-font-size: 95%;
 }
+.centered-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px; /* Adjust the size as needed */
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.1);
